# GameEngine

./: .gitmodules  CMakeLists.txt  TODO  test.h
include/: CoreEngine.h  IGame.h  MyGame.h  circle.h  rectangle.h  render_item.h  render_queue.h  renderer.h  shape.h
include/engine/: CoreEngine.h  audio_system.h  constants.h  input_handler.h
include/interface/: IEngine.h  IGame.h  Iinput.h
include/rendering/: render_item.h  renderer.h  shader.h
include/shapes/: background.h  circle.h  ellipse.h  line.h  rectangle.h  shape.h  shapes_lib.h  star.h  triangle.h
shaders/: fragment_shader.frag  vertex_shader.vert
src/: CoreEngine.cpp  background.cpp  circle.cpp  input_handler.cpp  main.cpp  rectangle.cpp  render_queue.cpp  renderer.cpp  shader.cpp  shape.cpp
src/rendering/: render_queue.cpp  renderer.cpp
src/shapes/: circle.cpp  ellipse.cpp  line.cpp  rectangle.cpp  shape.cpp  star.cpp  triangle.cpp
